# hello_world_python

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: development.md
src/01_basics/: 01_basic_syntax.py  02_variables_and_data_types.py  03_operators.py  04_string_operations.py  05_container_types.py  06_control_flow.py  07_functions.py  08_modules_and_packages.py  09_exception_handling.py  10_file_operations.py  11_list_comprehensions.py  12_decorators.py  __init__.py  control_flow.py  functions.py  variables_data_types.py
src/02_oop/: 01_class_definition.py  02_object_instance.py  03_encapsulation.py  04_inheritance.py  05_polymorphism.py  06_abstraction.py  __init__.py  advanced_oop.py  classes_objects.py
src/03_data_processing/: __init__.py  file_handling.py  regex_examples.py
src/04_advanced/: 01_generators_iterators.py  02_context_managers.py  __init__.py
src/05_concurrency/: 01_threading_examples.py  __init__.py
src/06_testing_debugging/: 01_unittest_examples.py  __init__.py  debugging_tips.py
src/hello_world_python/: __init__.py  hello.py
tests/: test_version.py
tests/hello_world_python/: test_hello.py
