[project]
name = "hello_world_python"
version = "0.1.0"
description = "My Awesome Project!"
readme = "README.md"
authors = [
    {name = "taoweidong", email = "taoweidong@outlook.com"}
]
license = {text = "MIT"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "pytest-html>=4.1.1",
    "pytest-cov>=6.1.1",
]

[project.optional-dependencies]
dev = [
    "pylint>=2.17.4",
    "isort>=5.12.0",
    "pytest>=7.3.1",
    "mkdocs>=1.4.3",
    "mkdocs-material>=8.5.11",
    "pytest-pylint>=0.19.0",
]

[project.scripts]
hello-world-python = "main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing --cov-report=html --cov-config=pyproject.toml"

[tool.coverage.run]
source = ["src"]
